# game_of_life

./: Cargo.toml  README.MD
src/: main.rs
